--- a/Footer/footer_kn_1_0_0/index.html
+++ b/Footer/footer_kn_1_0_0/index.html
@@ -21,8 +21,8 @@
                     <div class="footer_kn_1_0_0__info">
                         <span class="footer_kn_1_0_0__title">TP HCM</span>
                         <div class="footer_kn_1_0_0__box">
-                            <span class="footer_kn_1_0_0__text">
-                                <img width="20px" height="20px" src="images/location.svg" alt="">
+                            <span class="footer_kn_1_0_0__text address">
+                                <img width="15px" height="15px" src="images/location.svg" alt="">
                                 <a 
                                 href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7873808,106.6621278,17z/data=!4m13!1m7!3m6!1s0x31752fa0cfc24fdd:0x8b50e2061ac8ec72!2zNjY2IMSQLiBDw6FjaCBN4bqhbmcgVGjDoW5nIDgsIFBoxrDhu51uZyAxMSwgVMOibiBCw6xuaCwgVGjDoG5oIHBo4buRIEjhu5MgQ2jDrSBNaW5oLCBWaWV0bmFt!3b1!8m2!3d10.7873755!4d106.6643165!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7872392!4d106.6643386" 
                                 rel="nofollow" target="_blank">
@@ -30,11 +30,11 @@
                                 </a>
                             </span>
                             <span class="footer_kn_1_0_0__text">
-                                <img width=" 20px" height="20px" src="images/phone.svg" alt="">
+                                <img width="15px" height="15px" src="images/phone.svg" alt="">
                                 <a rel="nofollow" target="_blank" href="tel:024.73.00.64.66">024.73.00.64.66</a>
                             </span>
                             <span class="footer_kn_1_0_0__text">
-                                <img width="20px" height="20px" src="images/phone.svg" alt="">
+                                <img width="15px" height="15px" src="images/phone.svg" alt="">
                                 <a rel="nofollow" target="_blank" href="tel:0948.44.99.88">0948.44.99.88</a>
                             </span>
                         </div>
@@ -43,19 +43,19 @@
                     <div class="footer_kn_1_0_0__info">
                         <span class="footer_kn_1_0_0__title">Hà Nội</span>
                         <div class="footer_kn_1_0_0__box">
-                            <span class="footer_kn_1_0_0__text">
-                                <img width="20px" height="20px" src="images/location.svg" alt="">
+                            <span class="footer_kn_1_0_0__text address">
+                                <img width="15px" height="15px" src="images/location.svg" alt="">
                                 <a href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@21.0004462,105.8284237,17z/data=!4m8!1m2!2m1!1zQuG7h25oIFZp4buHbiBUaOG6qW0gTeG7uSBLYW5nbmFtIA!3m4!1s0x3135ab920d07ad6b:0xaeafc086533191b!8m2!3d21.0004112!4d105.8306137"
                                 rel="nofollow" target="_blank">
                                 190A+B Trường Chinh, P.Khương Thượng, Q.Đống Đa, TP.Hà Nội
                                 </a>
                             </span>
                             <span class="footer_kn_1_0_0__text">
-                                <img width="20px" height="20px" src="images/phone.svg" alt="">
+                                <img width="15px" height="15px" src="images/phone.svg" alt="">
                                 <a rel="nofollow" target="_blank" href="tel:024.73.00.64.66">024.73.00.64.66</a>
                             </span>
                             <span class="footer_kn_1_0_0__text">
-                                <img width="20px" height="20px" src="images/phone.svg" alt="">
+                                <img width="15px" height="15px" src="images/phone.svg" alt="">
                                 <a rel="nofollow" target="_blank"  href="tel:0968.999.777">0968.999.777</a>
                             </span>
                         </div>
