--- a/Footer/footer_kn_1_0_0/index.html
+++ b/Footer/footer_kn_1_0_0/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div class="note">
+        <div class="container">
+            <span>Kết quả phụ thuộc vào cơ địa mỗi người(*)</span>
+        </div>
+    </div>
     <footer class="footer_kn_1_0_0">
         <div class="container">
             <div class="footer_kn_1_0_0__wrapper">
