--- a/Footer/footer_kn_1_0_0/index.html
+++ b/Footer/footer_kn_1_0_0/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="note">
+    <div class="footer_kn_1_0_0__note">
         <div class="container">
             <span>Kết quả phụ thuộc vào cơ địa mỗi người(*)</span>
         </div>
