--- a/Footer/footer_da_1_0_0/index.html
+++ b/Footer/footer_da_1_0_0/index.html
@@ -5,46 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>footer ĐÁ</title>
-    <link rel="stylesheet" href="footer_1_0_0.css">
+    <title>footer ĐA</title>
+    <link rel="stylesheet" href="sass/footer_1_0_0.scss">
+    <link rel="stylesheet" href="css/footer_1_0_0.css">
+    <link rel="stylesheet" href="css/footer_1_0_0.css.map">
 
 </head>
 
 <body>
-    <section class="footer_ld_3_0_0">
+    <div class="kq mb">
         <div class="container">
-            <div class="footer_ld_3_0_0__box">
-                <div class="footer_ld_3_0_0__logo">
-                    <div class="logo">
+            <p>(*) Kết quả tùy thuộc cơ địa của mỗi người</p>
+        </div>
+    </div>
+    <section class="footer_da_1_0_0">
+        <div class="container">
+            <div class="footer_da_1_0_0__box">
+                <div class="footer_da_1_0_0__logo">
+                    <div class="footer_da_1_0_0__image">
                         <img src="images/logo-ft.png" alt="">
                     </div>
-                    <div class=" note">
-                        <i class="pc">*Lưu ý: Kết quả phụ thuộc vào cơ địa mỗi người</i>
-                        <p class="mb">SỐ CCHN: 00378/BP-CCHN <br> QĐ 238/BYT - GPHĐ - BỘ Y TẾ </p>
+                    <div class="footer_da_1_0_0__note">
+                        <i class="footer_da_1_0_0__pc">*Lưu ý: Kết quả phụ thuộc vào cơ địa mỗi người</i>
+                        <p class="footer_da_1_0_0__mb">SỐ CCHN: 00378/BP-CCHN <br> QĐ 238/BYT - GPHĐ - BỘ Y TẾ </p>
                     </div>
-                    <div class="social">
-                        <a target="_blank" rel="nofollow" href="https://www.facebook.com/ThamMyDongA/"><img
-                                data-src="media/images/facebook.jpg?ver=1" alt=""></a>
-                        <a target="_blank" rel="nofollow" href="https://zalo.me/878201671944129168"><img
-                                data-src="media/images/zalo.jpg?ver=1" alt=""></a>
-                        <a target="_blank" rel="nofollow" href="https://www.youtube.com/user/thammyviendonga"><img
-                                data-src="media/images/youtube.jpg?ver=1" alt=""></a>
-                        <a target="_blank" rel="nofollow"
-                            href="https://www.instagram.com/accounts/login/?next=/bvtm_donga/"><img
-                                data-src="media/images/insta.jpg?ver=1" alt=""></a>
+                    <div class="footer_da_1_0_0__social">
+                        <a href="https://www.facebook.com/ThamMyDongA">
+                            <img src="images/facebook.jpg" alt="">
+                        </a>
+                        <a href="https://zalo.me/878201671944129168">
+                            <img src="images/zalo.jpg" alt="">
+                        </a>
+                        <a href="https://www.youtube.com/user/thammyviendonga">
+                            <img src="images/youtube.jpg" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/accounts/login/?next=/bvtm_donga/">
+                            <img src="images/insta.jpg" alt="">
+                        </a>
                     </div>
                 </div>
-                <div class="footer_ld_3_0_0__local">
-                    <div class="footer_ld_3_0_0__title">
+                <div class="footer_da_1_0_0__local">
+                    <div class="footer_da_1_0_0__title">
                         Bệnh viện thẩm mỹ đông á
                     </div>
-                    <div class="local">
+                    <div class="footer_da_1_0_0__address">
                         <p><i class="icon-location"></i><b>TP.HCM:</b> 218 Nguyễn Trãi, Phường 3, Q5</p>
                     </div>
-                    <div class="footer_ld_3_0_0__title">
+                    <div class="footer_da_1_0_0__title">
                         HỆ THỐNG THẨM MỸ VIỆN ĐÔNG Á
                     </div>
-                    <div class="local">
+                    <div class="footer_da_1_0_0__address">
                         <!-- <p><i class="icon-location"></i><b>TP.HCM:</b> 69A Đường 3 tháng 2, Q.10</p> -->
                         <p><i class="icon-location"></i><b>Hà Nội:</b> 212 Kim Mã, Q.Ba Đình</p>
                         <p><i class="icon-location"></i><b>Đà Nẵng:</b> 293 Hùng Vương, Q.Thanh Khê</p>
@@ -57,8 +67,8 @@
                         <p><i class="icon-location"></i><b>Bắc Ninh:</b> Số 519 - 521 Ngô Gia Tự, P.Tiền An</p>
                     </div>
                 </div>
-                <div class="footer_ld_3_0_0__contact">
-                    <div class="footer_ld_3_0_0__title">
+                <div class="footer_da_1_0_0__contact">
+                    <div class="footer_da_1_0_0__title">
                         Đối tác
                     </div>
                     <div class="contact">
@@ -67,7 +77,7 @@
                             Quốc.</p>
                         <p><b>Yuki Medical Group:</b> 2-10-4 Yoyogi, Shibuya-ku, Tokyo, Nhật Bản.</p>
                     </div>
-                    <div class="footer_ld_3_0_0__title tit">
+                    <div class="footer_da_1_0_0__title tit">
                         Liên hệ với chúng tôi
                     </div>
                     <div class="contact">
@@ -78,9 +88,10 @@
                 </div>
             </div>
         </div>
-        <div class="footer_ld_3_0_0__copyright">
+        <div class="footer_da_1_0_0__copyright">
             <div class="container">
-                <span class="pc">SỐ CCHN: 00378/BP-CCHN / QĐ 238/BYT - GPHĐ - BỘ Y TẾ |</span> Copyright © Hệ thống
+                <span class="footer_da_1_0_0__pc">SỐ CCHN: 00378/BP-CCHN / QĐ 238/BYT - GPHĐ - BỘ Y TẾ |</span>
+                Copyright © Hệ thống
                 thẩm
                 mỹ viện Đông Á | All Rights Reserved
             </div>
