--- a/Header/header_kn_1_1_0/index.html
+++ b/Header/header_kn_1_1_0/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header-KangNam</title>
-    <link rel="stylesheet" href="media/css/style.css">
+    <link rel="stylesheet" href="media/sass/style.css">
 </head>
 
 <body>
