--- a/Header/header_kn_1_1_0/index.html
+++ b/Header/header_kn_1_1_0/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="header_1_1_0__section header_1_1_0__main">
                     <a href="#page1" class="header_1_1_0__logo2">
-                        <img width="161" height="86" src="media/images/logo.svg" alt="">
+                        <img width="161" height="46" src="media/images/logo.svg" alt="">
                     </a>
                     <ul class="header_1_1_0__list">
                         <li>
@@ -49,11 +49,11 @@
                         </li>
                     </ul>
                     <div class="header_1_1_0__phone modal-btn" data-modal="modal-top">
-                        <img width="30" height="22" src="./media/images/call.svg" alt="">
+                        <img width="30" height="22" src="media/images/call.svg" alt="">
                         <a> 1900.6466</a>
                     </div>
                     <div class="header_1_1_0__regist modal-btn" data-modal="modal-pop">
-                        <img width="29" height="18" src="./media/images/uudai.svg" alt="">
+                        <img width="29" height="18" src="media/images/uudai.svg" alt="">
                         <a>Nhận ưu đãi</a>
                     </div>
                 </div>
