--- a/Header/header_kn_1_1_0/index.html
+++ b/Header/header_kn_1_1_0/index.html
@@ -23,7 +23,7 @@
                     <div class="header_1_1_0__menu">
                         <img width="30" height="30" src="media/images/menu-m.svg" alt="">
                     </div>
-                    <a class="header_1_1_0__call modalbtn" data-modal="modal-top">
+                    <a class="header_1_1_0__call modal-btn" data-modal="modal-top">
                         <img width="36" height="36" src="media/images/call-m.svg" alt="">
                     </a>
                 </div>
