--- a/Popup/pop_formreg_1_2_0/index.html
+++ b/Popup/pop_formreg_1_2_0/index.html
@@ -30,7 +30,7 @@
                         <article>
                             <div class="fct">
                                 <div class="pop_formreg_1_2_0__name">
-                                    <img width="48" height="48" src="media/images/person-244.svg" alt="">
+                                    <img width="48" height="48" src="media/images/user.svg" alt="">
                                     <input name="iname" type="text" placeholder="* Tên:......................">
                                 </div>
                                 <div class="pop_formreg_1_2_0__viber">
