--- a/banner/banner_1_0_0/index.html
+++ b/banner/banner_1_0_0/index.html
@@ -15,15 +15,22 @@
     <div class="banner_1_0_0">
         <div class="banner_1_0_0__box">
             <div class="banner_1_0_0__form">
-                <input type="text" name="" id="" placeholder="Họ tên">
-                <input type="text" name="" id="" placeholder="Số điện thoại">
+                <input id="iname" name="iname" required="" placeholder="*Họ tên:" type="text">
+                <input type="hidden" id="gclid_field" name="gclid_field" value="">
+                <input type="hidden" id="code_campaign" name="code_campaign" value="584301759">
+                <input type="hidden" id="name_campaign" name="name_campaign" value="[Hong Ha] Thương Hiệu Tư Vấn">
+                <input id="imob" name="imob" required="" placeholder="* Số điện thoại:" type="text">
+                <input style="display: none" id="itext" name="itext" required="" placeholder="Nội dung cần tư vấn" type="text">
+                <input id="iemail" name="iemail" type="hidden" placeholder="Email">
                 <textarea name="" id="" cols="20" rows="4" placeholder="Nhu cầu tư vấn"></textarea>
             </div>
             <div class="banner_1_0_0__btn">
-                <button>Đăng ký tư vấn miễn phí</button>
+                <button onclick="ants_send_contact(this)">Đăng ký tư vấn miễn phí</button>
             </div>
         </div>
     </div>
 </body>
+<script src=" https://benhvienhongha.vn/css/custom_v2.js?v=220521 "></script>
+<script type="text/javascript " src="https://benhvienhongha.com.vn/css/js_ver2.js?t=663 " async=" "></script>
 
 </html>
