--- a/Popup/pop_regpr_1_0_0/index.html
+++ b/Popup/pop_regpr_1_0_0/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Popup__Paris</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="media/css/pop_regpr_1_0_0.css">
     <link rel="stylesheet" href="https://huudinh.github.io/media/css/style-min.css">
-    <script src="https://huudinh.github.io/media/js/lib-min.js"></script>
-    <link rel="stylesheet" href="css/app.css">
+    <script src="media/js/lib.min.js"></script>
 </head>
 
 <body>
-    <a href="#" class="modal-btn btn " data-modal="modal-pop"> click để nhận tư vấn</a>
-    <a href="#" class="modal-btn btn" data-modal="modal-top"> click để lại sđt</a>
+    <button class="modal-btn" data-modal="modal-pop">Dang ky</button>
     <section class="pop_regpr_1_0_0">
         <div class="pop_regpr_1_0_0__box">
             <div class="modal" id="modal-pop">
@@ -22,9 +21,9 @@
                     <div class="modal-header">
                         <div class="modal-close" id="modal-close">×</div>
                         <div class="modal-title">
-                            <img src="images/logo.png" alt="">
+                            <img width="300" height="110" src="media/images/logo.svg" alt="">
                             <div class="pop_regpr_1_0_0__des">
-                                <p>MIỄN PHÍ THĂM KHÁM BỞI CHUYÊN GIA</p>
+                                <p>NHẬN ƯU ĐÃI NGAY CHỈ CÒN 39 SUẤT</p>
                             </div>
                         </div>
                     </div>
@@ -32,89 +31,20 @@
                         <div>
                             <input id="iname" name="iname" type="textbox" required="" placeholder="Họ tên*:">
                             <input id="imob" name="imob" type="textbox" required="" placeholder="Điện thoại*:">
-                            <textarea placeholder="Dịch vụ quan tâm: " rows="1" cols="1" id="itext"
-                                name="itext"></textarea>
+                            <textarea placeholder="Thời gian muốn liên hệ: " rows="1" cols="1" id="itext" name="itext"></textarea>
                             <input type="hidden" style="display:none" id="iemail" name="iemail" placeholder="Email:">
                             <input type="hidden" id="gclid_field" name="gclid_field" value="">
-                            <input type="hidden" id="code_campaign" name="code_campaign" value="584128457">
-                            <input type="hidden" id="name_campaign" name="name_campaign"
-                                value="[Paris] Cấy ghép Implant 4S">
+                            <input type="hidden" id="code_campaign" name="code_campaign" value="558803148">
+                            <input type="hidden" id="name_campaign" name="name_campaign" value="[Paris] Thương Hiệu Sale">
                         </div>
                         <div class="pop_regpr_1_0_0__clicknow">
-                            <input id="pop_regpr_1_0_0_clicknow" onclick="ants_send_contact(this);" type="button"
-                                value="NHẬN ƯU ĐÃI NGAY">
+                            <input id="pop_regpr_1_0_0_clicknow" onclick="ants_send_contact(this);" type="button" value="NHẬN ƯU ĐÃI NGAY">
                             <div class="pop_regpr_1_0_0__contact">
                                 <p>Mọi thông tin của bạn đều được bảo mật</p>
-                                <p>Tư vấn trực tiếp 24/7: <a href="tel:19006466">1900.6466</a></p>
+                                <p>Tư vấn trực tiếp 24/7: <a href="tel:1900.6900">1900.6900</a></p>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="pop_callpr_1_0_0">
-        <div class="pop_callpr_1_0_0__box">
-            <div class="modal" id="modal-top">
-                <div class="modal-bg"></div>
-                <div class="modal-box animate-top">
-                    <div class="modal-header">
-                        <div class="modal-close">×</div>
-                        <div class="modal-title">
-                            <img src="images/logo.png" alt="">
-                        </div>
-                    </div>
-                    <div class="modal-body">
-                        <div class="pop_callpr_1_0_0__contact">
-                            <div class="modal-title">
-                                <div class="pop_callpr_1_0_0__des">
-                                    <p>Gọi ngay để được tư vấn & đặt lịch hẹn</p>
-                                </div>
-                            </div>
-                            <a href="tel:19006900" class="pop-call"
-                                onclick="gtag('event','touch', {event_category: 'call',event_label: '19006900'});">
-                                <svg class="icon__call" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
-                                    <g fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round">
-                                        <path
-                                            d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5L15 13l5 2v4a2 2 0 0 1-2 2A16 16 0 0 1 3 6a2 2 0 0 1 2-2">
-                                        </path>
-                                        <path d="M15 7a2 2 0 0 1 2 2"></path>
-                                        <path d="M15 3a6 6 0 0 1 6 6"></path>
-                                    </g>
-                                </svg> 1900 6900</a>
-                        </div>
-                        <div class="modal-header">
-                            <div class="modal-title">
-                                <div class="pop_callpr_1_0_0__des">
-                                    <p>Để lại số điện thoại của bạn <br>
-                                        để được tư vấn từ Nha Khoa Paris</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div style="display:none">
-
-                                <input type="text" placeholder="Họ và tên (*)" value="Yêu Cầu Gọi Lại" id="iname"
-                                    name="iname">
-                                <textarea type="text" placeholder="Nhu cầu tư vấn" id="itext" name="itext"></textarea>
-                                <input id="iemail" name="iemail" value="no@email.benhvienthammykangnam.vn" type="hidden"
-                                    placeholder="Email">
-                                <input type="hidden" id="gclid_field" name="gclid_field" value="">
-                                <input type="hidden" id="code_campaign" name="code_campaign" value="584128457">
-                                <input type="hidden" id="name_campaign" name="name_campaign"
-                                    value="[Paris] Cấy ghép Implant 4S">
-                            </div>
-                            
-                            <input id="imob" name="imob" type="textbox" placeholder="Nhập số điện thoại*:">
-                        </div>
-                        <div class="pop_callpr_1_0_0__click">
-                            <input id="pop_sents" type="button" onclick="ants_send_contact(this);" value="NHẬN ƯU ĐÃI NGAY">
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
         </div>
